--- a/package.json
+++ b/package.json
@@ -4,17 +4,33 @@
   "description": "react spinners library",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint '**/*.js'",
+    "lint:fix": "prettier-eslint --write $PWD/'src/**/*.{js}' $PWD/'*.{js}'"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/alokkulkarni/react-ak-css-spinners.git"
   },
-  "keywords": ["react", "css", "spinners"],
+  "keywords": [
+    "react",
+    "css",
+    "spinners"
+  ],
   "author": "Alok Kulkarni",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/alokkulkarni/react-ak-css-spinners/issues"
   },
-  "homepage": "https://github.com/alokkulkarni/react-ak-css-spinners#readme"
+  "homepage": "https://github.com/alokkulkarni/react-ak-css-spinners#readme",
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-standard": "^4.0.1",
+    "prettier-eslint": "^9.0.1",
+    "prettier-eslint-cli": "^5.0.0"
+  }
 }
