--- a/package.json
+++ b/package.json
@@ -7,6 +7,17 @@
     "lint": "eslint '**/*.js'",
     "lint:fix": "prettier-eslint --write $PWD/'src/**/*.{js}' $PWD/'*.{js}'"
   },
+  "husky": {
+    "hook": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "npm run lint:fix",
+      "git add"
+    ]
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/alokkulkarni/react-ak-css-spinners.git"
@@ -30,6 +41,8 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-standard": "^4.0.1",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.1.5",
     "prettier-eslint": "^9.0.1",
     "prettier-eslint-cli": "^5.0.0"
   }
